[gd_scene load_steps=7 format=3 uid="uid://c7q6tfk747m2s"]

[ext_resource type="Script" path="res://UI/hotbar/hotbar.gd" id="1_vns6k"]
[ext_resource type="Theme" uid="uid://cat181e5lkfme" path="res://UI/hotbar.tres" id="2_lhqnk"]
[ext_resource type="Texture2D" uid="uid://bosiphqbkrmj2" path="res://asserts/hotbar/heart.png" id="3_er66e"]
[ext_resource type="Texture2D" uid="uid://bdo57qq5snss8" path="res://asserts/hotbar/gear.png" id="5_2uujx"]
[ext_resource type="Theme" uid="uid://c6kofwqx8wa7h" path="res://UI/theme2.tres" id="5_ixu5t"]
[ext_resource type="Texture2D" uid="uid://dcx6abxysmwq5" path="res://asserts/hotbar/bulb.png" id="6_h0m5a"]

[node name="hotbar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vns6k")

[node name="Heart" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.199653
anchor_top = 0.790123
anchor_right = 0.236111
anchor_bottom = 0.851852
tooltip_text = "Heart"
theme = ExtResource("2_lhqnk")
icon = ExtResource("3_er66e")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Logic" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.395833
anchor_top = 0.790123
anchor_right = 0.430556
anchor_bottom = 0.851852
tooltip_text = "Logic"
theme = ExtResource("2_lhqnk")
icon = ExtResource("5_2uujx")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Creativity" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.604167
anchor_top = 0.790123
anchor_right = 0.638889
anchor_bottom = 0.851852
tooltip_text = "Creativity"
theme = ExtResource("2_lhqnk")
icon = ExtResource("6_h0m5a")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 20.0
offset_top = 472.0
offset_right = 20.0
offset_bottom = 548.0
theme = ExtResource("5_ixu5t")

[connection signal="mouse_entered" from="Heart" to="." method="_on_heart_mouse_entered"]
[connection signal="mouse_entered" from="Logic" to="." method="_on_logic_mouse_entered"]
[connection signal="mouse_entered" from="Creativity" to="." method="_on_creativity_mouse_entered"]
